--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic-manup",
-  "version": "2.0.0",
+  "version": "2.0.0-bissap",
   "description": "Mandatory Update for Ionic 2+ apps",
   "main": "lib/main.js",
   "typings": "lib/main",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/NextFaze/ionic-manup"
+    "url": "https://github.com/ouedraog/ionic-manup"
   },
   "keywords": [
     "ionic",
@@ -28,21 +28,20 @@
   "author": "NextFaze <npm-support@nextfaze.com>",
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^10.0.5",
-    "@angular/compiler-cli": "^10.0.5",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/animations": "~10.0.9",
+    "@angular/common": "~10.0.9",
+    "@angular/compiler": "~10.0.9",
+    "@angular/compiler-cli": "~10.0.9",
+    "@angular/core": "~10.0.9",
+    "@angular/forms": "~10.0.9",
+    "@angular/platform-browser": "~10.0.9",
+    "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/platform-server": "^4.4.3",
-    "@angular/router": "^8.2.14",
+    "@angular/router": "~10.0.9",
     "@ionic-native/app-version": "^5.18.0",
     "@ionic-native/core": "^5.18.0",
-    "@ionic-native/in-app-browser": "^5.17.1",
-    "@ionic/angular": "^4.7.1",
-    "@ionic/storage": "1.1.9",
+    "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^7.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^7.0.5",
@@ -50,7 +49,6 @@
     "angular2-template-loader": "^0.6.2",
     "codecov": "^1.0.1",
     "coveralls": "^2.11.16",
-    "ionic-angular": "^2.0.0",
     "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^3.2.0",
