--- a/package.json
+++ b/package.json
@@ -28,20 +28,20 @@
   "author": "NextFaze <npm-support@nextfaze.com>",
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "~10.0.9",
-    "@angular/common": "~10.0.9",
-    "@angular/compiler": "~10.0.9",
-    "@angular/compiler-cli": "~10.0.9",
-    "@angular/core": "~10.0.9",
-    "@angular/forms": "~10.0.9",
-    "@angular/platform-browser": "~10.0.9",
-    "@angular/platform-browser-dynamic": "~10.0.9",
-    "@angular/platform-server": "^4.4.3",
-    "@angular/router": "~10.0.9",
-    "@ionic-native/app-version": "^5.18.0",
-    "@ionic-native/core": "^5.18.0",
-    "@ionic/angular": "^5.0.0",
-    "@ionic/storage": "^2.2.0",
+    "@angular/animations": "~13.3.12",
+    "@angular/common": "~13.3.12",
+    "@angular/compiler": "~13.3.12",
+    "@angular/compiler-cli": "~13.3.12",
+    "@angular/core": "~13.3.12",
+    "@angular/forms": "~13.3.12",
+    "@angular/platform-browser": "~13.3.12",
+    "@angular/platform-browser-dynamic": "~13.3.12",
+    "@angular/platform-server": "^13.3.12",
+    "@angular/router": "~13.3.12",
+    "@awesome-cordova-plugins/app-version": "^6.3.0",
+    "@awesome-cordova-plugins/core": "^6.3.0",
+    "@ionic/angular": "^6.5.1",
+    "@ionic/storage": "^3.0.6",
     "@ngx-translate/core": "^7.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^7.0.5",
@@ -62,29 +62,28 @@
     "karma-mocha-reporter": "^2.2.2",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-typescript": "^3.0.7",
     "karma-webpack": "^2.0.4",
     "mocha": "^3.2.0",
-    "rxjs": "6.5.2",
+    "rxjs": "^6.5.3",
     "ts-loader": "^2.3.7",
     "ts-node": "^2.1.0",
     "tslint": "^4.4.2",
     "tslint-eslint-rules": "^3.3.0",
-    "typescript": "^3.9.7",
+    "typescript": "^4.6.4",
     "webpack": "^2.1.0-beta.25",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.11.8"
   },
   "peerDependencies": {
-    "@angular/common": ">=8.0.0",
-    "@angular/core": ">=8.0.0",
     "@ionic/storage": ">=1.1.9",
-    "@ionic-native/app-version": ">=4.3.1",
-    "@ionic-native/core": ">=4.3.1",
-    "@ionic-native/in-app-browser": ">=4.3.1",
-    "rxjs": ">=5.0.0-beta.12",
-    "zone.js": ">=0.6.26"
+    "@awesome-cordova-plugins/app-version": ">=4.3.1",
+    "@awesome-cordova-plugins/core": ">=4.3.1",
+    "@awesome-cordova-plugins/in-app-browser": ">=4.3.1",
+    "rxjs": ">=5.0.0-beta.12"
   },
   "dependencies": {
     "semver": "^5.3.0"
+  },
+  "resolutions": {
+  "webpack": "^5.0.0"
   }
 }
